--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "@azure/msal-node": "^1.17.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "msal": "^1.4.18",
     "passport": "^0.6.0",
     "passport-azure-ad": "^4.3.5",
-    "passport-saml": "^3.2.4"
+    "passport-saml": "^3.2.4",
+    "xml-crypto": "^3.1.0"
   }
 }
